--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,10 @@
 version: '2'
 services:
   zookeeper:
+    container_name: zookeper-car-data
     image: quay.io/debezium/zookeeper:latest
   kafka:
+    container_name: kafka-car-data
     image: quay.io/debezium/kafka:latest
     ports:
      - 9092:9092
@@ -11,6 +13,7 @@ services:
     environment:
      - ZOOKEEPER_CONNECT=zookeeper:2181
   postgres:
+    container_name: postgres-car-data
     build: ./postgres
     ports:
      - 5432:5432
@@ -25,6 +28,7 @@ services:
     ports:
       - 8080:8080
   connect:
+    container_name: debezium-car-data
     image: debezium/connect-jdbc-es:latest
     build:
       context: debezium-jdbc-es
@@ -44,4 +48,6 @@ services:
      - STATUS_STORAGE_TOPIC=_source_connect_statuses
      - CONNECT_JDBC_URL=jdbc:postgresql://postgres:5432/database
   python-app:
+    container_name: ml-main-app
     build: ./src
+    command: bash -c "python configure_connectors.py"
