--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,4 +50,9 @@ services:
   python-app:
     container_name: ml-main-app
     build: ./src
-    command: bash -c "python configure_connectors.py"
+    command: > 
+      bash -c "python configure_connectors.py
+      && tail -f /dev/null"
+    volumes:
+      - ./src/app:/src/app/
+  
